topbar overflow bugfix

--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -5,8 +5,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--white);
   z-index: 1;
+  padding: 0 2rem;
 
   & > p.eheading {
     margin: 0;
