--- a/src/pages/Home-Page/components/Friends/Friends.scss
+++ b/src/pages/Home-Page/components/Friends/Friends.scss
@@ -1,7 +1,6 @@
 .efriends {
   grid-area: friends;
   min-width: 30.5rem;
-  padding: 0 2rem;
   display: flex;
   background-color: var(--white);
   flex-direction: column;
