--- a/src/pages/Home-Page/components/RecentCalls/RecentCalls.scss
+++ b/src/pages/Home-Page/components/RecentCalls/RecentCalls.scss
@@ -1,7 +1,6 @@
 .erecentCalls {
   grid-area: recentCalls;
   min-width: 30.5rem;
-  padding: 0 2rem;
   display: flex;
   background-color: var(--white);
   flex-direction: column;
