--- a/src/pages/Home-Page/components/Recents/Recents.scss
+++ b/src/pages/Home-Page/components/Recents/Recents.scss
@@ -1,7 +1,6 @@
 .erecents {
   grid-area: recents;
   min-width: 30.5rem;
-  padding: 0 2rem;
   display: flex;
   background-color: var(--white);
   flex-direction: column;
